nodejs/graphs/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphs-service
spec:
  # type: NodePort
  type: LoadBalancer
  selector:
    app: graphs
  ports:
  - port: 3000
    targetPort: 3000
    # nodePort: 30001 
    protocol: TCP
