nodejs/graphs/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphs-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/proxy-body-size: "0"
  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - host: graphs.local
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: graphs-service
            port:
              number: 3000
